--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -11,4 +11,4 @@ aidan:
   url: https://www.aidankeighron.dev/
 arnav:
   name: Arnav Gupta
-  url: www.linkedin.com/in/arnav-gupta3410
+  url: https://www.linkedin.com/in/arnav-gupta3410
