--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -12,3 +12,6 @@ aidan:
 arnav:
   name: Arnav Gupta
   url: https://www.linkedin.com/in/arnav-gupta3410
+johnny:
+  name: Johnny Stouffer
+  url: https://www.linkedin.com/in/johnny-stouffer/
