series and topics in basic state

--- a/_config.yml
+++ b/_config.yml
@@ -220,5 +220,5 @@ jekyll-archives:
     category: category
     tag: tag
   permalinks:
-    tag: /tags/:name/
-    category: /categories/:name/
+    tag: /series/:name/
+    category: /topics/:name/
